# automated-network-design-deployment

./: .gitignore  .start_pids  README.md  TODO.md  TODO.md.orig  contrib-map.md  contrib.html  contributions.md  db.sql  docker-compose.yml  id.sh  output.txt  start.sh  start_all.ps1  start_backend.md  tasks.md
ai-service/: .service_pids  README.md  bm25_state.json  config.py  diagnostic_scroll.py  ingest.py  main.py  pyproject.toml  search.py  start_ai_service.ps1  start_service.sh  start_service.txt  test_autorun.py  test_autorun_bmsce.py  web_test.py
ai-service/copy/: ingest.py
ai-service/output/: 2026-05-02_15-24-16_run.md  2026-05-02_15-58-54_run.md  2026-05-02_18-22-28_run.md  2026-05-12_20-07-16_run.md  2026-05-12_21-18-02_run.md  2026-05-13_18-38-57_run.md  2026-05-13_20-10-16_run.md  2026-05-13_22-55-57_run.md  2026-05-13_23-12-40_run.md  2026-05-14_15-32-22_run.md  2026-05-14_15-40-27_run.md  2026-05-14_17-00-49_run.md  2026-06-06_01-38-26_run.md  2026-06-06_01-49-44_run.md  2026-06-06_01-57-18_run.md  2026-06-06_01-58-47_run.md  2026-06-06_01-59-25_run.md  2026-06-06_02-07-04_run.md  2026-06-06_02-07-32_run.md  2026-06-06_02-12-26_run.md  2026-06-06_02-13-00_run.md  2026-06-08_03-04-37_run.md  2026-06-08_03-13-40_run.md  2026-06-08_03-22-42_run.md  2026-06-08_13-04-35_run.md  2026-06-08_13-26-00_run.md  2026-06-09_13-41-01_run.md  2026-06-09_14-18-24_run.md  2026-06-09_14-42-22_run.md  2026-06-09_15-04-08_run.md  2026-06-09_20-26-53_run.md  2026-06-09_21-18-31_run.md  2026-06-10_11-06-28_run.md  2026-06-10_11-26-37_run.md  2026-06-10_11-36-47_run.md  (+20 more)
(+84 files in other folders)
